# key-protection-module

./: .gitignore  .gitmodules  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  cloudbuild.yaml  gen_keymanager.sh  go.mod  go.sum  renovate.json
.github/workflows/: ci.yml
cmd/agent/: main.go  main_test.go
image/: attestation.service  cloudbuild.yaml  entrypoint.sh  exit_script.sh  fluent-bit-kps.conf  fluent-bit-kps.service  image.env  keymanager.service  kps_runner.sh  network_setup.sh
internal/telemetry/: telemetry.go  telemetry_test.go
key_protection_service/: grpc_server.go  grpc_server_test.go  server.go  server_test.go  service.go
key_protection_service/proto/: api.pb.go  api.pb.gw.go  api.proto  api_grpc.pb.go
keymanager/attestation_service/: go.mod  go.sum  service_test.go
km_common/: Cargo.toml
km_common/claimserver/: claimserver.go
km_common/proto/: crypto_types.pb.go  crypto_types.proto  crypto_types_test.go  key_claims.proto  key_claims_grpc.pb.go  modes.pb.go  modes.proto
km_common/src/: crypto.rs  key_types.rs  lib.rs  protected_mem.rs  telemetry.rs
km_common/src/crypto/: secret_box.rs  x25519.rs
km_common/tests/: panic_sanitization.rs  redaction.rs
scripts/: validate-fluentbit-config.sh  validate-systemd-units.sh  vm-test-monitor.sh  vm-test-startup.sh
tests/: Dockerfile.test  run_grpc_wsd_e2e.sh  run_schema_tests.sh  test_grpc_wsd_e2e.py
tests/integration/: test_wsd_api_signatures.py
workload_service/: grpc_integration_test.go  integration_test.go  key_claims_server.go  server.go  server_test.go
(+12 files in other folders)
